--- a/pom.xml
+++ b/pom.xml
@@ -168,6 +168,11 @@
 			<artifactId>commons-lang3</artifactId>
 			<version>3.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.ethereum</groupId>
+			<artifactId>ethereumj-core</artifactId>
+			<version>1.3.6-RELEASE</version>
+		</dependency>
 		<!-- avoiding one error during test execution, yet getting another one -->
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
